# pysisso

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pydocstyle  CHANGES  CHANGES.rst  LICENCE.rst  LICENSE.rst  README.md  README.rst  pyproject.toml  pytest.ini  requirements-ci.txt  setup.py
.github/workflows/: main_ci.yml  python-package.yml
docs/: api.html  genindex.html  index.html  license.html  license_link.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pysisso/: inputs.html  jobs.html  outputs.html  sklearn.html  utils.html  validators.html
docs/_sources/: api.rst.txt  index.rst.txt  license.rst.txt  license_link.rst.txt
docs/_sources/api/: modules.rst.txt
docs/_sources/background/: index.rst.txt
docs/_sources/how-to/: index.rst.txt
docs/_sources/reference/: index.rst.txt
docs/api/: modules.html  pysisso.html
docs/background/: index.html
docs/how-to/: index.html
docs/reference/: index.html
docs/tutorial/: index.html
docs_rst/: Makefile  conf.py  index.rst  index.rst.backup
docs_rst/api/: pysisso.rst
docs_rst/tutorial/: index.rst
examples_usage/basic/01_regression/: cubic_function.py
examples_usage/basic/02_regression_gridsearch_cv/: cubic_function_gridsearch_cv.py
examples_usage/basic/03_model_persistence/: cubic_function.py
examples_usage/basic/04_OMP/: OMP.py
pysisso/: __init__.py  inputs.py  jobs.py  outputs.py  sklearn.py  utils.py  validators.py
pysisso/tests/: test_inputs.py  test_jobs.py  test_outputs.py  test_sklearn.py  test_utils.py  test_validators.py
test_files/inputs/: SISSO.in_simple
test_files/outputs/: SISSO.3.0.2.out_not_finished
test_files/runs/OMP/: SISSO.in  SISSO.out
test_files/runs/cubic_function/: SISSO.in  SISSO.out
test_files/runs/perfect_linear_5pts/: SISSO.in  SISSO.out
test_files/runs/perfect_linear_5pts_multi/: SISSO.in  SISSO.out
